# portfolio_backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
bijay_dev/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
bijay_dev/management/commands/: seed_bijay.py
bijay_dev/migrations/: 0001_initial.py  0002_techstack_icon_cdn.py  0003_alter_education_description_and_more.py
common/: __init__.py  base_model.py  constants.py  exception_handler.py  exceptions.py  pagination.py  renderers.py  responses.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: seed_core.py
core/migrations/: 0001_initial.py  0002_alter_profile_bio.py  0003_alter_sociallink_platform.py  0004_alter_sociallink_platform.py
docs/: setup.md
kashmin_dev/: apps.py
shrishant_dev/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
shrishant_dev/management/commands/: seed_shrishant.py
shrishant_dev/migrations/: 0001_initial.py  0002_techstack_icon_cdn.py  0003_alter_education_description_and_more.py
uday_dev/: apps.py
